fix z-index menu

--- a/src/scss/components/c-menu/_c-menu.scss
+++ b/src/scss/components/c-menu/_c-menu.scss
@@ -3,6 +3,7 @@
     width: 100%;
     border-bottom: 1px solid #ebebeb;
     transition: .4s box-shadow linear;
+    z-index: 99;
 
     &--fixed {
         position: fixed;
